--- a/style.css
+++ b/style.css
@@ -188,6 +188,15 @@ body {
     margin: 0 3.3px;
 }
 
+.level-decorator img{
+    height: 12px;
+    width: auto;
+}
+
+.level-decorator.flip img{
+    transform: scaleX(-1);
+}
+
 .progress-bar {
     display: flex;
     flex-direction: row;
@@ -497,12 +506,14 @@ body {
 }
 
 .main-content {
+    padding-top: 11%;
+    gap: 11%;
     height: 100%;
     display: flex;
     flex-direction: column;
     width: calc(var(--numpad-size) * 3 + var(--numpad-gap) * 2);
     margin: auto auto;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
 }
 
 .keyboard-container {
