--- a/style.css
+++ b/style.css
@@ -360,8 +360,9 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 11px;
     font-weight: 600;
-    z-index: 999;
+    z-index: 888;
     height: 70vh;
+    min-height: calc(0.7 * 1080px);
     width: 80%;
     text-align: start;
     transition: transform 0.238s ease;
