--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --color-accent: #9BDF46;
     --color-secondary: #25A55F;
     --color-error: #ff5a5a;
-    --color-gray1: #E6EAEF;
+    --color-gray1: #e3e9de;
     --color-gray2: #afafaf;
     --color-gray3: #1f2d2c;
     --color-blue: #719EBD;
@@ -14,6 +14,7 @@
     --color-progress: var(--color-error);
     --container-width: 601px;
     --box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    height: 100vh;
 }
 
 [data-theme="dark"] {
@@ -38,18 +39,48 @@
     font-family: 'Inter', sans-serif;
 }
 
+@media (max-width: 600px) {
+    .header__brand span{
+        display: none;
+    }
+
+    .record-item__word-count{
+        display: none;
+    }
+
+    .record-item__letters{
+        width: 100%;
+        margin-top: 12px !important;
+        justify-content: space-between;
+    }
+
+    .record-item__letter{
+        height: 26px !important;
+        width: 26px !important;
+    }
+    
+    .tooltip {
+        left: -580% !important;
+    }
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    max-height: 100vh;
-    overflow-x: hidden;
+    width: 100vw;
     background-color: var(--color-bg);
 }
 
 .container {
-    min-width: var(--container-width);
+    max-width: var(--container-width);
+    width: 100%;
     margin: 0 auto;
+    padding: 0 8px;
 }
 
 /* ===== HEADER COMPONENT ===== */
@@ -84,7 +115,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 6px 0;
+    padding: 6px 8px;
     z-index: 1;
 }
 
@@ -113,6 +144,10 @@ body {
 
 .header__actions div {
     height: 12px;
+}
+
+#theme-btn__icon{
+    transform: scaleX(-1);
 }
 
 /* ===== TOOLTIP COMPONENT ===== */
@@ -392,7 +427,7 @@ body {
     font-weight: 600;
     z-index: 888;
     height: 70vh;
-    min-height: calc(0.7 * 1080px);
+    min-height: calc(0.85 * 100vh);
     width: 80%;
     text-align: start;
     transition: transform 0.238s ease;
@@ -433,7 +468,7 @@ body {
 
 .record-item {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     border: dashed 1px var(--color-blue);
     padding: 16px 18px;
@@ -444,6 +479,12 @@ body {
     display: inline;
     font-weight: 600;
     font-size: 20px;
+}
+
+.record-item__container{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .record-item__point {
@@ -459,25 +500,20 @@ body {
 
 .record-item__word-count {
     font-size: 11px;
+    align-self: flex-end;
     color: var(--color-gray2);
-    margin-top: 6px;
 }
 
 .record-item__word-count--total {
-    color: var(--color-primary) !important;
+    color: var(--color-gray3) !important;
     font-weight: 600 !important;
-}
-
-.record-item__game-data {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
 }
 
 .record-item__letters{
     display: flex;
-    gap: 5px;
+    margin-left: auto;
+    margin-top: 4px;
+    gap: 6px;
 }
 
 .record-item__letter{
@@ -524,7 +560,7 @@ body {
     align-items: center;
     margin-top: 12px;
     margin-bottom: 1.5%;
-    min-height: calc(0.58 * 1080px);
+    /* min-height: calc(0.58 * 1080px); */
 }
 
 .game-board {
@@ -629,6 +665,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    max-width: 100vw;
     gap: 11px;
     color: var(--color-blue);
     text-align: center;
@@ -637,9 +674,10 @@ body {
 }
 
 .footer img {
-    width: 36%;
+    width: 36vw;
     height: auto;
     margin: auto;
+    max-width: 200px;
 }
 
 .footer__content {
